--- a/src/App.css
+++ b/src/App.css
@@ -3,24 +3,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #282C34;
+  background-color: #282c34;
 }
 
 .container {
   display: flex;
   height: 80vh;
-  border: 1px solid grey;
+  border: 5px solid ;
+  border-image: linear-gradient(135deg, red, green, blue) 1;
   padding: 20px;
   flex-direction: column;
   align-items: center;
   font-size: 20px;
-  color: white
+  color: white;
 }
 
 .todoForm {
   display: flex;
   justify-content: space-around;
   width: 450px;
+  margin-bottom: 25px;
 }
 
 input {
@@ -45,11 +47,11 @@ button {
 
 .singleTodo {
   border-radius: 50px;
-  margin: 10px 0;
+  margin: 20px 0;
   background-color: #5dadf8;
   padding: 10px 20px;
   display: flex;
-  width: 450px;
+  width: 400px;
   align-items: center;
 }
 
