--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 .container {
   display: flex;
   height: 80vh;
-  border: 5px solid ;
+  border: 5px solid;
   border-image: linear-gradient(135deg, red, green, blue) 1;
   padding: 20px;
   flex-direction: column;
@@ -48,7 +48,7 @@ button {
 .singleTodo {
   border-radius: 50px;
   margin: 20px 0;
-  background-color: #5dadf8;
+  background-image: linear-gradient(red, green, blue);
   padding: 10px 20px;
   display: flex;
   width: 400px;
